# protoforge

./: CMakeLists.txt  README.md  main.c
archive/: archive.c
forge/: file_manager.c  forge.c
include/: archive.h  colour.h  data_manager.h  file_manager.h  forge.h  prompt_manager.h  refine.h  stats.h
refine/: refine.c
stats/: stats.c
utils/: data_manager.c  file_manager.c  prompt_manager.c
